[package]
name = "spectrum"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.0", features = ["rand"] }
rand = "0.8"
rayon = "1"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "22.0"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
wgpu = { version = "22.0", features = ["webgl"] }
